<resources>
    <string name="msg_subscribed">Subscribe to new topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="app_name">NetSDK Demo</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="common_information">Please Choose Suitable Environment</string>
    <string name="common_login">Login</string>
    <string name="common_logout">Logout</string>
    <string name="logining">Logining...</string>
    <string name="waiting">Waiting...</string>
    <string name="title_function_list">Function List</string>
    <string name="activity_main_ip"> IP </string>
    <string name="activity_main_search_device"> Search Device </string>
    <string name="activity_main_ip_domin"> IP/Domain </string>
    <string name="activity_main_wifi_config"> WIFI Configuration </string>
    <string name="activity_main_p2p"> P2P </string>
    <string name="activity_preview">SingleChannelPreview</string>
    <string name="activity_main_talk">Talk</string>
    <string name="activity_iplogin_device_ip">Device IP</string>
    <string name="activity_iplogin_device_port">Device Port</string>
    <string name="activity_iplogin_username">Username</string>
    <string name="activity_iplogin_password">Password</string>
    <string name="activity_iplogin_port_err">Please check input device port</string>
    <string name="activity_iplogin_login_success">Login device success</string>
    <string name="activity_iplogin_login_failed">Login device failed</string>
    <string name="activity_iplogin_ip_empty">Please input ip address</string>
    <string name="activity_iplogin_port_empty">Please input port</string>
    <string name="activity_iplogin_username_empty">Please input username</string>
    <string name="activity_iplogin_password_empty">Please input password</string>
    <string name="activity_p2plogin_server_port_err">Please check input p2p port</string>
    <string name="activity_p2plogin_server_ip_empty">Please input p2p server ip</string>
    <string name="activity_p2plogin_server_port_empty">Please input p2p server port</string>
    <string name="activity_p2plogin_username_empty">Please input p2p username</string>
    <string name="activity_p2plogin_password_empty">Please input p2p password</string>
    <string name="activity_p2plogin_device_sn_empty">Please input device sn</string>
    <string name="failed_start_server">Failed to start P2P service.</string>
    <string name="activity_p2plogin_server_ip">P2P Server IP</string>
    <string name="activity_p2plogin_server_port">P2P Server Port</string>
    <string name="activity_p2plogin_username">P2P Username</string>
    <string name="activity_p2plogin_password">P2P Password</string>
    <string name="activity_p2plogin_device_id">Device SN</string>
    <string name="activity_p2plogin_device_port">Device Port</string>
    <string name="activity_p2plogin_device_username">Device Username </string>
    <string name="activity_p2plogin_device_password">Device Password</string>
    <string name="activity_function_list_live_preview"> Live Preview (Single Channel) </string>
    <string name="activity_function_list_double_channel"> Live Preview (Double Channel)</string>
    <string name="activity_function_list_play_back"> Playback </string>
    <string name="activity_function_list_talk"> Talk </string>
    <string name="activity_function_list_alarm_listen"> Alarm Listen </string>
    <string name="activity_function_list_alarm_push"> Alarm Push </string>
    <string name="activity_function_list_alarm_control"> Alarm Control </string>
    <string name="activity_function_list_device_control"> Device Control </string>
    <string name="channel">Channel</string>
    <string name="stream_type"> Strream Type </string>
    <string name="activity_queryLog_beginTime">Start</string>
    <string name="talk"> Talk </string>
    <string name="stoptalk"> StopTalk </string>
    <string name="speakonly"> Shout </string>
    <string name="stopspeakonly"> Stop Shout </string>
    <string name="start"> Start </string>
    <string name="stop"> Stop </string>
    <string name="starttalk"> StartTalk </string>
    <string name="startspeakonly"> Start Shout</string>
    <string name="start_audio_record">StartAudioRecord</string>
    <string name="set_speaking_parameter">Set Speaking Parameter</string>
    <string name="set_transfer_mode">Set Transfer Mode</string>
    <string name="set_server_mode">Set Server Mode</string>
    <string name="set_talk_encode_mode">Set Talk Encode Mode</string>
    <string name="snap_picture_remote">Snap</string>
    <string name="snap_picture_local">LocalSnapPicture</string>
    <string name="encode">Encode</string>
    <string name="ptz_control">PTZ</string>
    <string name="ptz_control_fragment_up">Up</string>
    <string name="ptz_control_fragment_down">Down</string>
    <string name="ptz_control_fragment_left">Left</string>
    <string name="ptz_control_fragment_right">Right</string>
    <string name="ptz_control_fragment_zoom_add">Zoom+</string>
    <string name="ptz_control_fragment_zoom_dec">Zoom-</string>
    <string name="ptz_control_fragment_focus_add">Focus+</string>
    <string name="ptz_control_fragment_focus_dec">Focus-</string>
    <string name="ptz_control_fragment_aperture_add">Iris+</string>
    <string name="ptz_control_fragment_aperture_dec">Iris-</string>
    <string name="ptz_control_fragment_setpreset">Set</string>
    <string name="ptz_control_fragment_clearpreset">Clear</string>
    <string name="ptz_control_fragment_gotopreset">Goto</string>
    <string name="ptz_control_fragment_preset">Preset ID:</string>
    <string name="ptz_control_fragment_info">PTZ support Sliding Operation, Zoom support two points Touch Operation</string>
    <string name="yes">OK</string>
    <string name="input_number">Please Input Number.</string>
    <string name="device_control_restart">Reboot Device</string>
    <string name="device_control_setuptime">SetUpTime</string>
    <string name="config_startsearchdevice">StartSearchDevice</string>
    <string name="config_stopsearchdevice">StopSearchDevice</string>
    <string name="alarm_control_input_channel">InputChannel</string>
    <string name="alarm_control_input_status">InputStatus</string>
    <string name="alarm_control_output_channel">OutputChannel</string>
    <string name="alarm_control_output_status">OutputStatus</string>
    <string name="alarm_control_trigger_channel">TriggerChannel</string>
    <string name="alarm_control_trigger_mode">TriggerMode</string>
    <string name="get">Get</string>
    <string name="set">Set</string>
    <string name="device_no_support_alarm_input_control">Device not support alarm input control.</string>
    <string name="device_no_support_alarm_output_control">Device not support alarm output control.</string>
    <string name="device_no_support_alarm_trigger_control">Device not support alarm trigger control.</string>
    <string name="activity_button_subscribe">Sub Alarm Notification</string>
    <string name="activity_button_unsubscribe">Unsub Alarm Notification</string>
    <string name="alarm_push_not_support_google_service">Google Service not support</string>
    <string name="alarm_push_sub_successed">Subscribe succeed</string>
    <string name="alarm_push_sub_failed">Subscribe failed</string>
    <string name="alarm_push_unsub_successed">Unsubscribe succeed</string>
    <string name="alarm_push_unsub_failed">Unsubscribe failed</string>
    <string name="alarm_push_video_motion">Video motion</string>
    <string name="alarm_push_unknown_type">Alarm unknown</string>
    <string name="alarm_push_title">Alarm</string>
    <string name="alarm_push_alarm_type">Alarm Type</string>
    <string name="alarm_push_alarm_time">Alarm Time</string>
    <string name="live_preview_failed">Realplay failed.</string>
    <string name="opens_tream">OpenStream</string>
    <string name="live_preview_not_support_double_channel">The device not support double channel preview.</string>
    <string name="alarm_listen_detect">Detect</string>
    <string name="alarm_listen_cancel">Cancel</string>
    <string name="alarm_listen_motion">Motion Alarm</string>
    <string name="NET_NOERROR">No error</string>
    <string name="NET_ERROR">Unknown error</string>
    <string name="NET_SYSTEM_ERROR"> System error</string>
    <string name="NET_NETWORK_ERROR">Protocol error </string>
    <string name="NET_DEV_VER_NOMATCH">Device protocol does not match</string>
    <string name="NET_INVALID_HANDLE">Handle is invalid</string>
    <string name="NET_OPEN_CHANNEL_ERROR">Failed to open channel</string>
    <string name="NET_CLOSE_CHANNEL_ERROR">Failed to close channel</string>
    <string name="NET_ILLEGAL_PARAM">User parameter is illegal</string>
    <string name="NET_SDK_INIT_ERROR">SDK initialization error</string>
    <string name="NET_SDK_UNINIT_ERROR">SDK clear error</string>
    <string name="NET_RENDER_OPEN_ERROR">Error occurs when apply for render resources.</string>
    <string name="NET_DEC_OPEN_ERROR">Error occurs when opening the decoder library</string>
    <string name="NET_DEC_CLOSE_ERROR">Error occurs when closing the decoder library</string>
    <string name="NET_MULTIPLAY_NOCHANNEL">The detected channel number is 0</string>
    <string name="NET_TALK_INIT_ERROR">Failed to initialize record library</string>
    <string name="NET_TALK_NOT_INIT">The record library has not been initialized</string>
    <string name="NET_TALK_SENDDATA_ERROR">Error occurs when sending out audio data</string>
    <string name="NET_REAL_ALREADY_SAVING">The real-time has been protected.</string>
    <string name="NET_NOT_SAVING">The real-time data has not been save.</string>
    <string name="NET_OPEN_FILE_ERROR">Error occurs when opening the file.</string>
    <string name="NET_PTZ_SET_TIMER_ERROR">Failed to enable PTZ to control timer.</string>
    <string name="NET_RETURN_DATA_ERROR">Error occurs when verify returned data.</string>
    <string name="NET_INSUFFICIENT_BUFFER">There is no sufficient buffer.</string>
    <string name="NET_NOT_SUPPORTED">The current SDK does not support this function.</string>
    <string name="NET_NO_RECORD_FOUND">There is no searched result.</string>
    <string name="NET_NOT_AUTHORIZED">You have no operation right.</string>
    <string name="NET_NOT_NOW">Can not operate right now.</string>
    <string name="NET_NO_TALK_CHANNEL">There is no audio talk channel.</string>
    <string name="NET_NO_AUDIO">There is no audio.</string>
    <string name="NET_NO_INIT">The network SDK has not been initialized.</string>
    <string name="NET_DOWNLOAD_END">The download completed.</string>
    <string name="NET_EMPTY_LIST">There is no searched result.</string>
    <string name="NET_ERROR_GETCFG_SYSATTR">Failed to get system property setup.</string>
    <string name="NET_ERROR_GETCFG_SERIAL">Failed to get SN.</string>
    <string name="NET_ERROR_GETCFG_GENERAL">Failed to get general property.</string>
    <string name="NET_ERROR_GETCFG_DSPCAP">Failed to get DSP capacity description.</string>
    <string name="NET_ERROR_GETCFG_NETCFG">Failed to get network channel setup.</string>
    <string name="NET_ERROR_GETCFG_CHANNAME">Failed to get channel name.</string>
    <string name="NET_ERROR_GETCFG_VIDEO">Failed to get video property.</string>
    <string name="NET_ERROR_GETCFG_RECORD">Failed to get record setup</string>
    <string name="NET_ERROR_GETCFG_PRONAME">Failed to get decoder protocol name</string>
    <string name="start_record">Record</string>
</resources>