<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:title="@string/activity_main_p2p"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.IPLoginActivity">

    <LinearLayout
        android:weightSum="4"
        android:id="@+id/input_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_iplogin_device_ip"
            android:id="@+id/textView"
            android:gravity="left|center" />

        <EditText
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextServerIp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="4"
        android:id="@+id/input_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_ip"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_iplogin_device_port"
            android:id="@+id/textView2"
            android:gravity="left|center"/>

        <EditText
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextServerPort"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="4"
        android:id="@+id/input_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_port"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_iplogin_username"
            android:id="@+id/textView3"/>

        <EditText
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextUsername"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="4"
        android:id="@+id/input_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_user"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_iplogin_password"
            android:id="@+id/textView4" />

        <EditText
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextPassword" />

     </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_login"
        android:id="@+id/buttonLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_remember_info"
        android:id="@+id/checkBox"
        android:layout_above="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:checked="true" />

</RelativeLayout>
