<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dahuatech.netsdk.activity.TalkActivity">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:textAllCaps="false"
            android:id="@+id/talk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/talk" />

        <RadioButton
            android:textAllCaps="false"
            android:id="@+id/speak_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speakonly"
            android:layout_weight="1"/>

    </RadioGroup>

    <Button
        android:textAllCaps="false"
        android:id="@+id/buttonstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
