<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:title="@string/activity_main_p2p"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.P2PLoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextP2pServerIp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_p2plogin_server_ip"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editTextP2pServerIp"
        android:gravity="left|center"
        android:layout_toLeftOf="@+id/editTextP2pServerIp"
        android:layout_toStartOf="@+id/editTextP2pServerIp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextP2pServerPort"
        android:inputType="number"
        android:layout_below="@+id/editTextP2pServerIp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_p2plogin_server_port"
        android:id="@+id/textView2"
        android:gravity="left|center"
        android:layout_alignBottom="@+id/editTextP2pServerPort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editTextP2pServerPort"
        android:layout_toLeftOf="@+id/editTextP2pServerPort"
        android:layout_toStartOf="@+id/editTextP2pServerPort" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextP2pUsername"
        android:inputType="text"
        android:layout_below="@+id/editTextP2pServerPort"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_p2plogin_username"
        android:id="@+id/textView3"
        android:gravity="left|center"
        android:layout_alignTop="@+id/editTextP2pUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editTextP2pUsername"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextP2pPassword"
        android:inputType="text"
        android:layout_below="@+id/editTextP2pUsername"
        android:layout_alignLeft="@+id/editTextP2pUsername"
        android:layout_alignStart="@+id/editTextP2pUsername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_p2plogin_password"
        android:id="@+id/textView4"
        android:gravity="left|center"
        android:layout_alignTop="@+id/editTextP2pPassword"
        android:layout_alignBottom="@+id/editTextP2pPassword"
        android:layout_toLeftOf="@+id/editTextP2pPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextP2pDeviceId"
        android:inputType="text"
        android:layout_below="@+id/editTextP2pPassword"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_p2plogin_device_id"
        android:id="@+id/textView5"
        android:gravity="left|center"
        android:layout_alignBottom="@+id/editTextP2pDeviceId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editTextP2pDeviceId"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextP2pDevicePort"
        android:inputType="number"
        android:layout_below="@+id/editTextP2pDeviceId"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_p2plogin_device_port"
        android:id="@+id/textView6"
        android:gravity="left|center"
        android:layout_alignBottom="@+id/editTextP2pDevicePort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editTextP2pDevicePort"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_remember_info"
        android:id="@+id/checkBoxP2p"
        android:checked="true"
        android:layout_above="@+id/buttonP2pLogin"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_login"
        android:id="@+id/buttonP2pLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextP2pDeviceUsername"
        android:inputType="text"
        android:layout_below="@+id/editTextP2pDevicePort"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_p2plogin_device_username"
        android:id="@+id/textView7"
        android:gravity="left|center"
        android:layout_alignBottom="@+id/editTextP2pDeviceUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editTextP2pDeviceUsername"
        android:layout_toLeftOf="@+id/editTextP2pDeviceUsername"
        android:layout_toStartOf="@+id/editTextP2pDeviceUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextP2pDeivcePassword"
        android:inputType="text"
        android:layout_below="@+id/editTextP2pDeviceUsername"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_p2plogin_device_password"
        android:id="@+id/textView8"
        android:gravity="left|center"
        android:layout_alignBottom="@+id/editTextP2pDeivcePassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_toLeftOf="@+id/editTextP2pDeivcePassword"
        android:layout_toStartOf="@+id/editTextP2pDeivcePassword" />

</RelativeLayout>
