<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dahuatech.netsdk.activity.LivePreviewActivity">

    <LinearLayout
        android:id="@+id/selector_continer"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:id="@+id/select_channel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:theme="@style/ThemeHoloLight" />
        <Spinner
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:id="@+id/select_stream_type"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:theme="@style/ThemeHoloLight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/selector_continer">
        <SurfaceView
            android:id="@+id/real_view"
            android:layout_width="match_parent"
            android:layout_height="280dp" />

        <include
            android:id="@+id/ptz_control"
            layout="@layout/ptz_control"
            android:gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <Button
            android:textAllCaps="false"
            android:id="@+id/preview_ptz_control"
            android:text="@string/ptz_control"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Button
            android:textAllCaps="false"
            android:id="@+id/preview_remote_snapPic"
            android:text="@string/snap_picture_remote"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Button
            android:textAllCaps="false"
            android:id="@+id/preview_record"
            android:text="@string/start_record"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Button
            android:textAllCaps="false"
            android:id="@+id/preview_encode"
            android:text="@string/encode"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

</RelativeLayout>